# mobile

./: .gitignore  ACCESSIBILITY.md  CHANGELOG.md  CLAUDE.md  PROJECT_COMPLETE.md  README.md  TESTING_REPORT.md  TEST_CREDENTIALS.md  api.json  app.json  newapi.json  package-lock.json  package.json  test-notification-creation.js  test-notification-system.js  test-patient-login-final.js  test-patient-login.js  test-status-notification.js
.docs/: test-data-summary.md  usage-scenario.md
__tests__/: run-all-tests.js
app/: _layout.tsx
components/: themed-text.tsx
constants/: theme.ts
contexts/: accessibility-context.tsx  auth-context.tsx  toast-context.tsx
docs/: FILE_ORGANIZATION_PLAN.md  MEDICAL_STANDARDS.md  NOTIFICATIONS_API_SPEC.md  NOTIFICATIONS_BACKEND_TODO.md  NOTIFICATIONS_TEST_RESULTS.md
hooks/: use-accessibility-font-size.ts  use-theme-color.ts  use-theme-colors.ts  useChecklist.ts  useComments.ts  useIOLCalculator.ts  useMediaUpload.ts  useModeration.ts  useNotifications.ts  useOfflineSync.ts  usePDFDownload.ts  usePatientDetail.ts  usePushNotifications.ts
lib/: api.ts  auth.ts  checklists.ts  comments.ts  date-mask.ts  districts.ts  index.ts  iol.ts  media.ts  medical-standards-examples.ts  medical-standards-verification.ts  notifications.ts  offline-queue.ts  patients.ts  phone-mask.ts  print.ts  push-notifications.ts  surgeries.ts  sync.ts  token-storage.ts
mcp-servers/: README.md
mcp-servers/emias_mcp/: .env.example  README.md  pyproject.toml  requirements.txt  server.py
scripts/: README.md  add-patient-data.js  change-password.js  (+17 more)
(+71 files in other folders)
